Added missing translations of Natural Wonders and Civilopedia Tutorials entries (#1498)
* Added missing translations natural wonders related

* Auto generation of translation files

* Missing Tutorial names translation

* Auto generation translation files

Co-authored-by: Yair Morgenstern <yairm210@hotmail.com>

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -483,6 +483,13 @@ Songhai = Songhajská říše
 Askia = Askijská říše
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Získává trojnásobek zlata z Barbarských táborů a drancování měst. Jednotky při naloďování se můžou bránit.
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Unikátní dovednosti
@@ -501,7 +508,8 @@ Number of city-states = Počet městských států
 One City Challenge = Výzva - Jen jedno město
 No barbarians = Bez barbarů
 No ancient ruins = Bez starobylých ruin
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Způsoby výhry
 Scientific = Vědecká
 Domination = Dominance
@@ -674,6 +682,10 @@ One of our trades with [nation] has been cut short = Jedna z našich obchodních
 [nation] refused to stop settling cities near us! = Národ [nation] vypověděl dohodu o nebudování měst poblíž našich hranic!
 We have allied with [nation]. = Uzavřeli jsme alianci s civilizací [nation].
 We have lost alliance with [nation]. = Ztratili jsme alianci s civilizací [nation].
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -844,6 +856,8 @@ Closest city = Nejbližší město
 Action = Činnost
 Defeated = Poražený(á)
 Tiles = Políčka
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -926,6 +940,43 @@ Clear terrain features = Smazat vlastnosti terénu
 Clear improvements = Smazat vylepšení
 Clear resource = Smazat zdroje
 Requires = Požadavky
+
+# Civilopedia Tutorials names
+
+ # Requires translation!
+After Conquering = 
+ # Requires translation!
+City Range = 
+ # Requires translation!
+Contact Me = 
+ # Requires translation!
+Culture and Policies = 
+ # Requires translation!
+Embarking = 
+ # Requires translation!
+Enemy City = 
+ # Requires translation!
+Idle Units = 
+ # Requires translation!
+Injured Units = 
+ # Requires translation!
+Introduction = 
+ # Requires translation!
+Luxury Resource = 
+ # Requires translation!
+New Game = 
+ # Requires translation!
+Roads and Railroads = 
+ # Requires translation!
+Siege Units = 
+ # Requires translation!
+Strategic Resource = 
+ # Requires translation!
+Unhappiness = 
+ # Requires translation!
+Victory Types = 
+ # Requires translation!
+Workers = 
 
 # Policies
 
@@ -1563,3 +1614,5 @@ Ambush II = Přepadení II
 Haka War Dance = Haka - valečný tanec
 -10% combat strength for adjacent enemy units = -10% bojové síly pro nepřátelské jednotky na sousedních políčkách
 Rejuvenation = Omlazení
+ # Requires translation!
+All healing effects doubled = 
