--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -852,6 +852,13 @@ Askia =
  # Requires translation!
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
  # Requires translation!
@@ -886,7 +893,8 @@ One City Challenge =
 No barbarians = 
  # Requires translation!
 No ancient ruins = 
-
+ # Requires translation!
+No Natural Wonders = 
  # Requires translation!
 Victory conditions = 
  # Requires translation!
@@ -1212,6 +1220,10 @@ One of our trades with [nation] has been cut short =
 We have allied with [nation]. = 
  # Requires translation!
 We have lost alliance with [nation]. = 
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -1541,6 +1553,8 @@ Action =
 Defeated = 
  # Requires translation!
 Tiles = 
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -1699,6 +1713,43 @@ Clear improvements =
 Clear resource = 
  # Requires translation!
 Requires = 
+
+# Civilopedia Tutorials names
+
+ # Requires translation!
+After Conquering = 
+ # Requires translation!
+City Range = 
+ # Requires translation!
+Contact Me = 
+ # Requires translation!
+Culture and Policies = 
+ # Requires translation!
+Embarking = 
+ # Requires translation!
+Enemy City = 
+ # Requires translation!
+Idle Units = 
+ # Requires translation!
+Injured Units = 
+ # Requires translation!
+Introduction = 
+ # Requires translation!
+Luxury Resource = 
+ # Requires translation!
+New Game = 
+ # Requires translation!
+Roads and Railroads = 
+ # Requires translation!
+Siege Units = 
+ # Requires translation!
+Strategic Resource = 
+ # Requires translation!
+Unhappiness = 
+ # Requires translation!
+Victory Types = 
+ # Requires translation!
+Workers = 
 
 # Policies
 
@@ -2925,3 +2976,5 @@ Haka War Dance =
 -10% combat strength for adjacent enemy units = 
  # Requires translation!
 Rejuvenation = 
+ # Requires translation!
+All healing effects doubled = 
