--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -485,6 +485,13 @@ Songhai = Songhaï
 Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Reçoit 3 fois plus d'or lors des pillages de campement barbare et de villes. Les unités embarquées peuvent se défendre.
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Uniques
@@ -504,7 +511,8 @@ Number of city-states = Nombre de cité-état
 One City Challenge = Défi ville unique
 No barbarians = Aucun barbare
 No ancient ruins = Aucune ruine ancienne
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Conditions de victoire
 Scientific = Scientifique
 Domination = Conquête
@@ -679,6 +687,10 @@ One of our trades with [nation] has been cut short = L'un de nos accord commerci
 [nation] refused to stop settling cities near us! = Le/la/l' [nation] refuse d'arrêter de fonder des cités près de nous !
 We have allied with [nation]. = Nous sommes alliés avec le/la/l' [nation].
 We have lost alliance with [nation]. = Notre alliance est terminée avec le/la/l' [nation].
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -850,6 +862,8 @@ Closest city = Ville la plus proche
 Action = Action
 Defeated = Vaincu
 Tiles = Tuiles
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -932,6 +946,43 @@ Clear terrain features = Effacer les caractéristiques des terrains
 Clear improvements = Effacer les améliorations
 Clear resource = Effacer les ressources
 Requires = Requiert
+
+# Civilopedia Tutorials names
+
+ # Requires translation!
+After Conquering = 
+ # Requires translation!
+City Range = 
+ # Requires translation!
+Contact Me = 
+ # Requires translation!
+Culture and Policies = 
+ # Requires translation!
+Embarking = 
+ # Requires translation!
+Enemy City = 
+ # Requires translation!
+Idle Units = 
+ # Requires translation!
+Injured Units = 
+ # Requires translation!
+Introduction = 
+ # Requires translation!
+Luxury Resource = 
+ # Requires translation!
+New Game = 
+ # Requires translation!
+Roads and Railroads = 
+ # Requires translation!
+Siege Units = 
+ # Requires translation!
+Strategic Resource = 
+ # Requires translation!
+Unhappiness = 
+ # Requires translation!
+Victory Types = 
+ # Requires translation!
+Workers = 
 
 # Policies
 
@@ -1568,3 +1619,5 @@ Ambush II = Embuscade II
 Haka War Dance = Haka - Danse de guerre
 -10% combat strength for adjacent enemy units = -10% de force de combats pour toutes les unités ennemies adjacentes
 Rejuvenation = Rajeunissement
+ # Requires translation!
+All healing effects doubled = 
