--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -483,6 +483,13 @@ Songhai = Songhai
 Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Saccheggiare città o conquistare accampamenti barbari frutta una quantità tripla di Oro. Le unità imbarcate possono difendersi da sole.
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Abilità unica
@@ -501,7 +508,8 @@ Number of city-states = Numero di Città-Stato
 One City Challenge = Sfida a città singola
 No barbarians = Niente barbari
 No ancient ruins = Niente antiche rovine
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Condizioni di Vittoria
 Scientific = Scientifica
 Domination = Dominazione
@@ -674,6 +682,10 @@ One of our trades with [nation] has been cut short = Un nostro accordo con [nati
 [nation] refused to stop settling cities near us! = [nation] ha rifiutato di smettere di fondare città vicino a noi!
 We have allied with [nation]. = Abbiamo stretto un'alleanza con [nation].
 We have lost alliance with [nation]. = Non siamo più alleati di [nation].
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -844,6 +856,8 @@ Closest city = Città più vicina
 Action = Azione
 Defeated = Sconfitto
 Tiles = Caselle
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -926,6 +940,43 @@ Clear terrain features = Elimina caratteristica del terreno
 Clear improvements = Elimina miglioramenti
 Clear resource = Elimina risorsa
 Requires = Richiede
+
+# Civilopedia Tutorials names
+
+ # Requires translation!
+After Conquering = 
+ # Requires translation!
+City Range = 
+ # Requires translation!
+Contact Me = 
+ # Requires translation!
+Culture and Policies = 
+ # Requires translation!
+Embarking = 
+ # Requires translation!
+Enemy City = 
+ # Requires translation!
+Idle Units = 
+ # Requires translation!
+Injured Units = 
+ # Requires translation!
+Introduction = 
+ # Requires translation!
+Luxury Resource = 
+ # Requires translation!
+New Game = 
+ # Requires translation!
+Roads and Railroads = 
+ # Requires translation!
+Siege Units = 
+ # Requires translation!
+Strategic Resource = 
+ # Requires translation!
+Unhappiness = 
+ # Requires translation!
+Victory Types = 
+ # Requires translation!
+Workers = 
 
 # Policies
 
@@ -1560,3 +1611,5 @@ Ambush II = Imboscata aerea II
 Haka War Dance = Danza di guerra Haka
 -10% combat strength for adjacent enemy units = -10% Forza alle unità nemiche adiacenti a questa unità
 Rejuvenation = Ringiovanimento
+ # Requires translation!
+All healing effects doubled = 
