--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -482,6 +482,13 @@ Songhai = Songhaj
 Askia = Asika
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Odtrymaj potrojone Złoto od Barbażyńskich obozowisk i plądrowanych Miast. Zaokrętowane jednostki mogą same się bronić
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Unikalne jednostki
@@ -500,7 +507,8 @@ Number of city-states = Liczba miast-państw
 One City Challenge = Wyzwanie z limitem 1 miasta
 No barbarians = Brak barbarzyńców
 No ancient ruins = Bez antycznych ruin
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Warunki zwycięstwa
 Scientific = Naukowe
 Domination = Dominacja
@@ -673,6 +681,10 @@ One of our trades with [nation] has been cut short = Jedna z naszych wymian hand
 [nation] refused to stop settling cities near us! = Nacja [nation] nadal będzie zakładać nowe miasta w pobliżu nas!
 We have allied with [nation]. = Jesteśmy sojusznikami z [nation].
 We have lost alliance with [nation]. = Nie jesteśmy już w sojuszu z [nation].
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -846,6 +858,7 @@ Closest city = Najbliższe miasto
 Action = Akcja
 Defeated = Pokonany
 Tiles = Pola
+Natural Wonders = 
 
 #Victory
 
@@ -929,6 +942,43 @@ Clear terrain features = Wyczyść cechy terenu
 Clear improvements = Wyczyść ulepszenia
 Clear resource = Wyczyść zasoby
 Requires = Wymagane
+
+# Civilopedia Tutorials names
+
+ # Requires translation!
+After Conquering = 
+ # Requires translation!
+City Range = 
+ # Requires translation!
+Contact Me = 
+ # Requires translation!
+Culture and Policies = 
+ # Requires translation!
+Embarking = 
+ # Requires translation!
+Enemy City = 
+ # Requires translation!
+Idle Units = 
+ # Requires translation!
+Injured Units = 
+ # Requires translation!
+Introduction = 
+ # Requires translation!
+Luxury Resource = 
+ # Requires translation!
+New Game = 
+ # Requires translation!
+Roads and Railroads = 
+ # Requires translation!
+Siege Units = 
+ # Requires translation!
+Strategic Resource = 
+ # Requires translation!
+Unhappiness = 
+ # Requires translation!
+Victory Types = 
+ # Requires translation!
+Workers = 
 
 # Policies
 
@@ -1563,3 +1613,5 @@ Ambush II = Zasadzka II (lotnictwo)
 Haka War Dance = Haka - taniec wojenny
 -10% combat strength for adjacent enemy units = -10% walecznej siły dla jednostek przeciwnika leżących na przyległych polach
 Rejuvenation = Odnowienie
+ # Requires translation!
+All healing effects doubled = 
