--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -696,6 +696,13 @@ Askia =
  # Requires translation!
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Uniques
@@ -723,7 +730,8 @@ One City Challenge =
 No barbarians = 
  # Requires translation!
 No ancient ruins = 
-
+ # Requires translation!
+No Natural Wonders = 
  # Requires translation!
 Victory conditions = 
  # Requires translation!
@@ -995,6 +1003,10 @@ One of our trades with [nation] has been cut short =
 We have allied with [nation]. = 
  # Requires translation!
 We have lost alliance with [nation]. = 
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -1218,6 +1230,8 @@ Action =
 Defeated = Învins
  # Requires translation!
 Tiles = 
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -1374,6 +1388,43 @@ Clear improvements =
  # Requires translation!
 Clear resource = 
 Requires = necesită
+
+# Civilopedia Tutorials names
+
+ # Requires translation!
+After Conquering = 
+ # Requires translation!
+City Range = 
+ # Requires translation!
+Contact Me = 
+ # Requires translation!
+Culture and Policies = 
+ # Requires translation!
+Embarking = 
+ # Requires translation!
+Enemy City = 
+ # Requires translation!
+Idle Units = 
+ # Requires translation!
+Injured Units = 
+ # Requires translation!
+Introduction = 
+ # Requires translation!
+Luxury Resource = 
+ # Requires translation!
+New Game = 
+ # Requires translation!
+Roads and Railroads = 
+ # Requires translation!
+Siege Units = 
+ # Requires translation!
+Strategic Resource = 
+ # Requires translation!
+Unhappiness = 
+ # Requires translation!
+Victory Types = 
+ # Requires translation!
+Workers = 
 
 # Policies
 
@@ -2241,3 +2292,5 @@ Haka War Dance =
 -10% combat strength for adjacent enemy units = 
  # Requires translation!
 Rejuvenation = 
+ # Requires translation!
+All healing effects doubled = 
