--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -489,6 +489,13 @@ Songhai = Songhai
 Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Recibe el triple de oro de campamentos bárbaros y ciudades saqueadoras. Las unidades embarcadas pueden defenderse.
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Exclusivos
@@ -507,7 +514,8 @@ Number of city-states = Número de ciudades-estado
 One City Challenge = Reto de una sola ciudad
 No barbarians = Sin bárbaros
 No ancient ruins = Sin ruinas antiguas
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Condiciones de victoria
 Scientific = Científica
 Domination = Dominación
@@ -680,6 +688,10 @@ One of our trades with [nation] has been cut short = Uno de nuestros intercambio
 [nation] refused to stop settling cities near us! = ¡[nation] se negó dejar de establecer ciudades cerca de nosotros!
 We have allied with [nation]. = Nos hemos aliado con [nation].
 We have lost alliance with [nation]. = Ya no estamos aliados con [nation].
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -850,6 +862,8 @@ Closest city = Ciudad más cercana
 Action =  Acción
 Defeated = Derrotado
 Tiles = Casillas
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -932,6 +946,43 @@ Clear terrain features = Limpiar características de terreno
 Clear improvements = Limpiar mejoras
 Clear resource = Limpiar recurso
 Requires = Requiere
+
+# Civilopedia Tutorials names
+
+ # Requires translation!
+After Conquering = 
+ # Requires translation!
+City Range = 
+ # Requires translation!
+Contact Me = 
+ # Requires translation!
+Culture and Policies = 
+ # Requires translation!
+Embarking = 
+ # Requires translation!
+Enemy City = 
+ # Requires translation!
+Idle Units = 
+ # Requires translation!
+Injured Units = 
+ # Requires translation!
+Introduction = 
+ # Requires translation!
+Luxury Resource = 
+ # Requires translation!
+New Game = 
+ # Requires translation!
+Roads and Railroads = 
+ # Requires translation!
+Siege Units = 
+ # Requires translation!
+Strategic Resource = 
+ # Requires translation!
+Unhappiness = 
+ # Requires translation!
+Victory Types = 
+ # Requires translation!
+Workers = 
 
 # Policies
 
@@ -1640,3 +1691,5 @@ Ambush II = Emboscada II
 Haka War Dance = Danza de la guerra Haka
 -10% combat strength for adjacent enemy units = -10% de fuerza de combate para unidades enemigas adyacentes
 Rejuvenation = Rejuvenecimiento
+ # Requires translation!
+All healing effects doubled = 
