--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -490,6 +490,13 @@ Songhai = Songhai
 Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Erhalte dreimal soviel Gold von Barbaren-Camps und plündern von Städten. Eingeschiffte Einheiten können sich selbst verteidigen.
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Unikate
@@ -508,7 +515,8 @@ Number of city-states = Anzahl Stadtstaaten
 One City Challenge = Herausforderung eine Stadt
 No barbarians = Keine Barbaren
 No ancient ruins = Keine alten Ruinen
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Siegbedingungen
 Scientific = Wissenschaftlich
 Domination = Vorherrschaft
@@ -683,6 +691,10 @@ One of our trades with [nation] has been cut short = Einer unserer Handel mit [n
 [nation] refused to stop settling cities near us! = [nation] hat sich geweigert, keine Städte mehr in unserer Nähe zu gründen!
 We have allied with [nation]. = Wir sind mit [nation] alliiert.
 We have lost alliance with [nation]. = Wir haben die Alianz mit [nation] verloren.
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -854,6 +866,8 @@ Closest city = Nächstgelegene Stadt
 Action = Aktion
 Defeated = Besiegt
 Tiles = Felder
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -936,6 +950,43 @@ Clear terrain features = Lösche Geländemerkmale
 Clear improvements = Lösche Verbesserungen
 Clear resource = Lösche Ressource
 Requires = Benötigt
+
+# Civilopedia Tutorials names
+
+ # Requires translation!
+After Conquering = 
+ # Requires translation!
+City Range = 
+ # Requires translation!
+Contact Me = 
+ # Requires translation!
+Culture and Policies = 
+ # Requires translation!
+Embarking = 
+ # Requires translation!
+Enemy City = 
+ # Requires translation!
+Idle Units = 
+ # Requires translation!
+Injured Units = 
+ # Requires translation!
+Introduction = 
+ # Requires translation!
+Luxury Resource = 
+ # Requires translation!
+New Game = 
+ # Requires translation!
+Roads and Railroads = 
+ # Requires translation!
+Siege Units = 
+ # Requires translation!
+Strategic Resource = 
+ # Requires translation!
+Unhappiness = 
+ # Requires translation!
+Victory Types = 
+ # Requires translation!
+Workers = 
 
 # Policies
 
@@ -1590,3 +1641,5 @@ Haka War Dance = Haka Kriegstanz
 -10% combat strength for adjacent enemy units = -10% Kampfstärke für angrenzende feindliche Einheiten
  # Requires translation!
 Rejuvenation = Verjüngung
+ # Requires translation!
+All healing effects doubled = 
