--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -485,6 +485,13 @@ Askia = Аския
  # Requires translation!
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Уникальные юниты
@@ -504,7 +511,8 @@ Number of city-states = Число городов-государств
 One City Challenge = Испытание одного города
 No barbarians = Без варваров
 No ancient ruins = Без древних руин
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Условия победы
 Scientific = Научная
 Domination = Завоевание
@@ -677,6 +685,10 @@ One of our trades with [nation] has been cut short = Торговая сделк
 [nation] refused to stop settling cities near us! = [nation] отказалась прекратить заселять города рядом с нами!
 We have allied with [nation]. = Мы вступили в альянс с [nation].
 We have lost alliance with [nation]. = Наш альянс с [nation] был расторгнут.
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -847,6 +859,8 @@ Closest city = Ближайший город
 Action = Действие
 Defeated = Побеждён
 Tiles = Клетки
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -929,6 +943,43 @@ Clear terrain features = Убрать особенности ландшафта
 Clear improvements = Удалить улучшения
 Clear resource = Удалить ресурсы
 Requires = Требует
+
+# Civilopedia Tutorials names
+
+ # Requires translation!
+After Conquering = 
+ # Requires translation!
+City Range = 
+ # Requires translation!
+Contact Me = 
+ # Requires translation!
+Culture and Policies = 
+ # Requires translation!
+Embarking = 
+ # Requires translation!
+Enemy City = 
+ # Requires translation!
+Idle Units = 
+ # Requires translation!
+Injured Units = 
+ # Requires translation!
+Introduction = 
+ # Requires translation!
+Luxury Resource = 
+ # Requires translation!
+New Game = 
+ # Requires translation!
+Roads and Railroads = 
+ # Requires translation!
+Siege Units = 
+ # Requires translation!
+Strategic Resource = 
+ # Requires translation!
+Unhappiness = 
+ # Requires translation!
+Victory Types = 
+ # Requires translation!
+Workers = 
 
 # Policies
 
@@ -1566,3 +1617,5 @@ Ambush II = Засада II
 Haka War Dance = Боевой танец Маори "Хака"
 -10% combat strength for adjacent enemy units = -10% силы в сражениях за соседних вражеских юнитов
 Rejuvenation = Восстановление
+ # Requires translation!
+All healing effects doubled = 
