--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -482,6 +482,10 @@ Songhai =
 Askia = 
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 
 
+Spain = 
+Isabella = 
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = 
@@ -500,7 +504,7 @@ Number of city-states =
 One City Challenge = 
 No barbarians = 
 No ancient ruins = 
-
+No Natural Wonders = 
 Victory conditions = 
 Scientific = 
 Domination = 
@@ -673,6 +677,8 @@ One of our trades with [nation] has been cut short =
 [nation] refused to stop settling cities near us! = 
 We have allied with [nation]. = 
 We have lost alliance with [nation]. = 
+We have discovered [naturalWonder]! = 
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -843,6 +849,7 @@ Closest city =
 Action = 
 Defeated = 
 Tiles = 
+Natural Wonders = 
 
 #Victory
 
@@ -925,6 +932,26 @@ Clear terrain features =
 Clear improvements = 
 Clear resource = 
 Requires = 
+
+# Civilopedia Tutorials names
+
+After Conquering = 
+City Range = 
+Contact Me = 
+Culture and Policies = 
+Embarking = 
+Enemy City = 
+Idle Units = 
+Injured Units = 
+Introduction = 
+Luxury Resource = 
+New Game = 
+Roads and Railroads = 
+Siege Units = 
+Strategic Resource = 
+Unhappiness = 
+Victory Types = 
+Workers = 
 
 # Policies
 
@@ -1559,3 +1586,4 @@ Ambush II =
 Haka War Dance = 
 -10% combat strength for adjacent enemy units = 
 Rejuvenation = 
+All healing effects doubled = 
