--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -482,12 +482,9 @@ Songhai = Songhaj
 Askia = Asika
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Odtrymaj potrojone Złoto od Barbażyńskich obozowisk i plądrowanych Miast. Zaokrętowane jednostki mogą same się bronić
 
- # Requires translation!
-Spain = 
- # Requires translation!
-Isabella = 
- # Requires translation!
-100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+Spain = Hiszpania
+Isabella = Izabella
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 100 Złota za odkrywanie Cudów Natury (premia zwiększona do 500 Złota, jeśli odkryjesz je jako pierwsszy). Kultura, Zadowolenie i Pola są podwajane z Cudów Natury. 
 
 # New game screen
 
@@ -507,8 +504,7 @@ Number of city-states = Liczba miast-państw
 One City Challenge = Wyzwanie z limitem 1 miasta
 No barbarians = Brak barbarzyńców
 No ancient ruins = Bez antycznych ruin
- # Requires translation!
-No Natural Wonders = 
+No Natural Wonders = Bez Cudów Natury 
 Victory conditions = Warunki zwycięstwa
 Scientific = Naukowe
 Domination = Dominacja
@@ -633,7 +629,7 @@ Work has started on [construction] = Rozpoczęto prace nad budową [construction
 [cityname] has expanded its borders! = Granice miasta [cityname] poszerzyły się!
 Your Golden Age has ended. = Twoja Złota Era dobiegła końca
 [cityName] has been razed to the ground! = Miasto [cityName] zostało zrównane z ziemią!
-We have conquered the city of [cityname]! = Napotkaliśmy miasto [cityname]!
+We have conquered the city of [cityname]! = Podbiliśmy miasto [cityname]!
 An enemy [unit] has attacked [cityname] = Wrogie jednostki [unit] ruszyły na [cityname]
 An enemy [unit] has attacked our [ourUnit] = Wrogie jednostki [unit] zaatakowały nasze oddziały [ourUnit]
 Enemy city [cityName] has attacked our [ourUnit] = Wrogie miasto [cityName] zaatakowało nasze jednostki [ourUnit]
@@ -681,10 +677,8 @@ One of our trades with [nation] has been cut short = Jedna z naszych wymian hand
 [nation] refused to stop settling cities near us! = Nacja [nation] nadal będzie zakładać nowe miasta w pobliżu nas!
 We have allied with [nation]. = Jesteśmy sojusznikami z [nation].
 We have lost alliance with [nation]. = Nie jesteśmy już w sojuszu z [nation].
- # Requires translation!
-We have discovered [naturalWonder]! = 
- # Requires translation!
-We have received [goldAmount] Gold for discovering [naturalWonder] = 
+We have discovered [naturalWonder]! = Odkryliśmy [naturlWonder]!
+We have received [goldAmount] Gold for discovering [naturalWonder] = Otrzymaliśmy [goldAmount] Złota za odkrycie [naturalWonder]
 
 # World Screen UI
 
@@ -778,7 +772,6 @@ Stopped expansion = Zatrzymana ekspansja
 Food converts to production = Przetwarzanie żywności na produkcje
 [turnsToStarvation] turns to lose population =  Ilość tur do utraty populacji: [turnsToStarvation]
 Stopped population growth = Zatrzymane rośnięcie populacji
- # Requires translation!
 In resistance for another [numberOfTurns] turns = W oporze przez następne tur: [numerOfTurns]
 Sell for [sellAmount] gold = Sprzedaj za [sellAmount] złota
 Are you sure you want to sell this [building]? = Aby czy na pewno chcesz sprzedać [buildings]?
@@ -823,10 +816,10 @@ vs [unitType] = kontra [unitType]
 Terrain = Teren
 
 
-Hurry Research = Szybkie Badanie
+Hurry Research = Przyspiesz Badanie
 Conduct Trade Mission = Prowadzenie Misji Handlowej
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = Twoja misja handlowa do [civName] zdobyła dla ciebie [goldAmount] złota oraz [influenceAmount] wpływów
-Hurry Wonder = Szybkie Cuda
+Hurry Wonder = Przyspiesz Budowanie Cudu
 
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Twoi obywatele są zadowoleni pod twoim panowaniem tak długo że imperium wkracza w Złotą Era
 You have entered the [newEra]! = Wkroczyłeś do 
@@ -858,7 +851,7 @@ Closest city = Najbliższe miasto
 Action = Akcja
 Defeated = Pokonany
 Tiles = Pola
-Natural Wonders = 
+Natural Wonders = Cuda Naturalne
 
 #Victory
 
@@ -945,40 +938,23 @@ Requires = Wymagane
 
 # Civilopedia Tutorials names
 
- # Requires translation!
-After Conquering = 
- # Requires translation!
-City Range = 
- # Requires translation!
-Contact Me = 
- # Requires translation!
-Culture and Policies = 
- # Requires translation!
-Embarking = 
- # Requires translation!
-Enemy City = 
- # Requires translation!
-Idle Units = 
- # Requires translation!
-Injured Units = 
- # Requires translation!
-Introduction = 
- # Requires translation!
-Luxury Resource = 
- # Requires translation!
-New Game = 
- # Requires translation!
-Roads and Railroads = 
- # Requires translation!
-Siege Units = 
- # Requires translation!
-Strategic Resource = 
- # Requires translation!
-Unhappiness = 
- # Requires translation!
-Victory Types = 
- # Requires translation!
-Workers = 
+After Conquering = Po Podboju
+City Range = Zasięg Miasta
+Contact Me = Skontaktuj się ze mną
+Culture and Policies = Kultura i Ustroje Społeczne
+Embarking = Wejście na pokład
+Enemy City = Miasto Przeciwnika
+Idle Units = Jednostki Nieaktywne
+Injured Units = Ranne Jednostki
+Introduction = Wprowadzenie
+Luxury Resource = Zasoby Luksusowe
+New Game = Nowa Gra
+Roads and Railroads = Drogi i Tory
+Siege Units = Jednostki Oblężnicze
+Strategic Resource = Zasoby Strategiczne
+Unhappiness = Niezadowolenie
+Victory Types = Rodzaje Zwycięstw
+Workers = Robotnicy
 
 # Policies
 
@@ -1613,5 +1589,4 @@ Ambush II = Zasadzka II (lotnictwo)
 Haka War Dance = Haka - taniec wojenny
 -10% combat strength for adjacent enemy units = -10% walecznej siły dla jednostek przeciwnika leżących na przyległych polach
 Rejuvenation = Odnowienie
- # Requires translation!
-All healing effects doubled = 
+All healing effects doubled = Wszystkie efekty leczenia są podwojone
